product_docs/docs/pgd/6.2/reference/cli/command_ref/cluster/verify.mdx
---
title: pgd cluster verify
navTitle: Verify
deepToC: true
redirects:
  - /pgd/latest/cli/command_ref/cluster/verify/ #generated for DOCS-1247-PGD-6.0-Docs
---

## Synopsis

The `pgd cluster verify` command is used to verify the configuration of an EDB Postgres Distributed cluster.

## Syntax

```plaintext
pgd cluster verify [OPTIONS]
```

## Options

The following table lists the options available for the `pgd cluster verify` command:

| Short | Long       | Description                              |
|-------|------------|------------------------------------------|
|       | --settings | Verify Postgres settings in the cluster. |
|       | --arch     | Verify the cluster architecture          |
| -v    | --verbose  | Display verbose output.                  |

With no option set, both setting and arch are verified by default and output is not verbose.

## Examples

### Verify the cluster settings and architecture

```shell
pgd cluster verify
__OUTPUT__
## Architecture
Check                    Status Groups
------------------------ ------ ------
Cluster has data nodes   Ok           
Witness nodes per group  Ok           
Witness-only groups      Ok           
Data nodes per group     Ok           
Empty groups             Ok           
Nodes have node kind set Ok           

# Settings
Setting Name                     Status
-------------------------------- ------
bdr.accept_connections           Ok    
bdr.ddl_locking                  Ok    
bdr.max_writers_per_subscription Ok    
bdr.raft_group_max_connections   Ok    
bdr.replay_progress_frequency    Ok    
bdr.role_replication             Ok    
bdr.start_workers                Ok    
bdr.writers_per_subscription     Ok    
bdr.xact_replication             Ok    
max_connections                  Ok    
max_prepared_transactions        Ok    
max_replication_slots            Ok    
max_wal_senders                  Ok    
max_worker_processes             Ok    
shared_preload_libraries         Ok    
track_commit_timestamp           Ok    
wal_level                        Ok  
```
