product_docs/docs/pgd/6.4/reference/cli/command_ref/cluster/verify.mdx
---
title: pgd cluster verify
navTitle: Verify
deepToC: true
redirects:
  - /pgd/latest/cli/command_ref/cluster/verify/ #generated for DOCS-1247-PGD-6.0-Docs
---

## Synopsis

The `pgd cluster verify` command is used to verify the configuration of an EDB Postgres Distributed cluster.

## Syntax

```plaintext
pgd cluster verify [OPTIONS]
```

## Options

The following table lists the options available for the `pgd cluster verify` command:

| Short | Long       | Description                              |
|-------|------------|------------------------------------------|
|       | --settings | Verify Postgres settings in the cluster  |
|       | --arch     | Verify the cluster architecture          |
| -v    | --verbose  | Display verbose output                   |

With no option set, the command verifies both `settings` and `arch` by default and the output is not verbose.

Use `--verbose` alongside `--arch` or `--settings` to include detailed information and specific advice about the cluster status.

Include the global option `-o markdown` to display the results in an inline Markdown format.

See also [Global Options](/pgd/latest/reference/cli/command_ref/#global-options).

## Examples

### Verify the cluster settings and architecture

```shell
pgd cluster verify
__OUTPUT__
## Architecture
Check                    Status Groups
------------------------ ------ ------
Cluster has data nodes   Ok           
Witness nodes per group  Ok           
Witness-only groups      Ok           
Data nodes per group     Ok           
Empty groups             Ok           
Nodes have node kind set Ok           

# Settings
Setting Name                     Status
-------------------------------- ------
bdr.accept_connections           Ok    
bdr.ddl_locking                  Ok    
bdr.max_writers_per_subscription Ok    
bdr.raft_group_max_connections   Ok    
bdr.replay_progress_frequency    Ok    
bdr.role_replication             Ok    
bdr.start_workers                Ok    
bdr.writers_per_subscription     Ok    
bdr.xact_replication             Ok    
max_connections                  Ok    
max_prepared_transactions        Ok    
max_replication_slots            Ok    
max_wal_senders                  Ok    
max_worker_processes             Ok    
shared_preload_libraries         Ok    
track_commit_timestamp           Ok    
wal_level                        Ok  
```

### Verify the cluster architecture with verbose output

```shell
pgd cluster verify --verbose --arch
__OUTPUT__
 Check                       | Status  | Groups | Details                                            
-----------------------------+---------+--------+----------------------------------------------------
 Cluster has data nodes      | Ok      |        |                                                    
 Max data nodes in a cluster | Ok      |        |                                                    
 Witness nodes per group     | Ok      |        |                                                    
 Witness-only groups         | Ok      |        |                                                    
 Data nodes per group        | Ok      |        |                                                    
 Routing enabled groups      | Warning | dc-1   | Recommended to enable routing only on global-group dc-1 
 Empty groups                | Ok      |        |                                                    
 Nodes have node kind set    | Ok      |        |      
                                              
```

### Verify the cluster architecture, display output Markdown formatted

```shell
pgd cluster verify --arch -o markdown
__OUTPUT__
Cluster has data nodes
----------------------
Cluster must have at least one data node

Result: Ok


Max data nodes in a cluster
---------------------------
A PGD Essential cluster must have at most three data nodes

Result: Ok


Witness nodes per group
-----------------------
Each data group has at most one witness node

Result: Ok


Witness-only groups
-------------------
Cluster has at most one witness-only group

Result: Ok


Data nodes per group
--------------------
Each data group has at least one data node

Result: Ok


Routing enabled groups
----------------------
A PGD Essential cluster must have routing enabled for global group only

Following groups have problems:

 - dc-1

Details:

 - Recommended to enable routing only on global-group dc-1

Result: Warning


Empty groups
------------
There are no empty groups

Result: Ok


Nodes have node kind set
------------------------
All nodes should have node_kind properly set

Result: Ok
```
